# node-gst-webrtc

./: .gitignore  .ts-for-girrc.js  README.md  package-lock.json  package.json  tsconfig.json
@types/: node-ambient.d.ts  node-glib-2.0-import.d.ts  node-gmodule-2.0-import.d.ts  node-gobject-2.0.d.ts  node-gst-1.0.d.ts  node-gstsdp-1.0-import.d.ts
@types/node-gtk/: GLib-2.0.d.ts  GLib-2.0.js  GModule-2.0.d.ts  GModule-2.0.js  GObject-2.0.d.ts  GObject-2.0.js  Gst-1.0.d.ts  Gst-1.0.js  GstSdp-1.0.d.ts  GstSdp-1.0.js  GstWebRTC-1.0.d.ts  GstWebRTC-1.0.js  index.d.ts
samples/: datachannel_local.js  simpleMediaStream.ts  simpleMediaStreamTrack.ts  stupid-webrtc-client.js
scripts/: generateOnGetterSetter.js
src/: gstUtils.ts  index.ts  prependPath.ts  utils.ts
src-native/: NgwNativeCommon.h  NgwNativePromise.c  NgwNativePromise.h  NgwNativeRTCDataChannel.c  NgwNativeRTCDataChannel.h  meson.build
src/@types/: node-girepository-2.0-import.d.ts  node-girepository-2.0.d.ts  node-glib-2.0.d.ts  node-gmodule-2.0.d.ts  node-gobject-2.0-import.d.ts  node-gst-1.0-import.d.ts  node-gstsdp-1.0.d.ts  node-gstwebrtc-1.0-import.d.ts  node-gstwebrtc-1.0.d.ts  node-ngwnative-0.0-import.d.ts  node-ngwnative-0.0.d.ts  node-ngwnative-0.0.js
src/media/: BaseTrackInput.ts  MediaStream.ts  MediaStreamTrack.ts  ProxyMultiplexer.ts  StandaloneStreamOutput.ts  StandaloneTrackOutput.ts  StandaloneVideoTrackOutput.ts  TeeMultiplexer.ts  TestAudioTrackInput.ts  TestVideoTrackInput.ts  events.ts
src/webrtc/: RTCDataChannel.ts  RTCIceCandidate.ts  RTCPeerConnection.ts  RTCRtpReceiver.ts  (+6 more)
